<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_below="@layout/title_layout"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prepass"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:id="@+id/tx1"
        android:layout_marginTop="30dp"
        android:textStyle="bold">



    </TextView>



    <EditText
        android:id="@+id/previous_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:layout_below="@+id/tx1"
        android:layout_gravity="center"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newpass"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:id="@+id/tx2"
        android:layout_below="@+id/previous_pass"
        android:textStyle="bold">

    </TextView>


    <EditText
        android:id="@+id/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:layout_below="@+id/tx2"

        android:layout_gravity="center"

        />

    <Button
        android:id="@+id/set_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/new_pass"

        android:text="@string/ok"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applang"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:id="@+id/applang"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/set_new_password"

        >
    </TextView>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/applang"


        />

    <Button
        android:id="@+id/btnSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/spinner"
        android:text="@string/set"


        />



</LinearLayout>